--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,9 +30,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <span class="material-icons-outlined">
+      <!-- <span class="material-icons-outlined">
         favorite_border
-      </span>
+      </span> -->
     </div>
     <!--
       This HTML file is a template.
