pink bow cursor

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+        cursor: url('/oth800.cur'), auto;
+      }
+    </style>
+    
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
