Dark mode enhanced

--- a/frontend/public/help.html
+++ b/frontend/public/help.html
@@ -27,7 +27,7 @@
         <b style= "color: #7e895e" ><h1>🌸User Documentation✨</h1></b>
         <h2 style= "color: #7e895e" ><u>PDF Guide</h2></header></u>
         <br>
-        <b style= "color: #7e895e" ><h2> Includes</b>: </h2>
+        <b style= "color: #7e895e" ><h2> Includes:</b></h2>
         <nav>
         </nav>
     </header>
