--- a/frontend/public/help.html
+++ b/frontend/public/help.html
@@ -9,18 +9,21 @@
     <style>
         .highlighted-text {
             display: inline-block;
-            font-size: 18px; /* Makes all text on the page bigger */
+            font-size: 18px;
             font-family: "Times New Roman", serif;
-            margin: auto; /* Centers the content */
+            margin: auto;
             padding: 30px;
-            max-width: 800px; /* Limits width */
+            max-width: 800px;
             border-radius: 5px;
-            /* background-color:  rgba(255, 229, 236, 0.5); */
-            background-color: rgba(255, 228, 225, 0.5);
-            /* box-shadow: 0px 0px 20px rgba(255, 105, 180, 0.3); */
-            text-align: center; /* Centers all text */
+            text-align: center;
+            background-color: rgba(255, 228, 225, 0.5); /* Light mode default */
+        }
+    
+        body.dark-mode .highlighted-text {
+            background-color: rgba(0, 0, 0, 0.5); /* Dark mode override */
         }
     </style>
+    
 </head>
 <body>
     <div class="highlighted-text"> <!-- This wraps all content inside the highlight -->    <header>
