--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        cursor: url('/oth800.cur'), auto;
+        cursor: url('/olive_green_cursor.cur'), auto;
       }
     </style>
     
